Creado mediante Colaboratory

--- a/Cuaderno1_Variables.ipynb
+++ b/Cuaderno1_Variables.ipynb
@@ -22,7 +22,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/JMMV314/Se-ales-y-Sistemas/blob/main/Copia_de_1_Variables.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/JMMV314/Se-ales-y-Sistemas/blob/main/Cuaderno1_Variables.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -788,22 +788,22 @@
       "cell_type": "code",
       "source": [
         "x=((3+2)/2.5)**2\n",
-        "print(f\"voy a imprimir {x}\")"
+        "print(f\"((3+2)/2.5)**2 = {x}\")"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "Ag5UvNqcq6jO",
-        "outputId": "961ab29b-a1b7-44bf-b3eb-40469b01fd32"
+        "outputId": "04fb074e-3c11-4f32-aacf-158bbb95a0c0"
       },
-      "execution_count": 11,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "voy a imprimir 4.0\n"
+            "((3+2)/2.5)**2 = 4.0\n"
           ]
         }
       ]
