Creado mediante Colaboratory

--- a/Cuaderno1_Variables.ipynb
+++ b/Cuaderno1_Variables.ipynb
@@ -859,17 +859,17 @@
       "source": [
         "weight=float(input(\"Please write your weihgt in kg: \"))\n",
         "heigh=float(input(\"Please write your heihg in meters: \"))\n",
-        "BMI=weight/(heigh**2)\n",
+        "BMI=round(weight/(heigh**2),2)\n",
         "print(f\"Your body mass index is {BMI}\")"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "-apb-zZPuTYO",
-        "outputId": "ed7b3c49-8ba0-46b2-b94e-ccae51bd9eb3"
+        "id": "q7YaRF3kyN3p",
+        "outputId": "e59ad240-b9b8-4001-f012-0f73ba25a23a"
       },
-      "execution_count": 9,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
@@ -877,7 +877,7 @@
           "text": [
             "Please write your weihgt in kg: 65\n",
             "Please write your heihg in meters: 1.75\n",
-            "Your body mass index is 21.224489795918366\n"
+            "Your body mass index is 21.22\n"
           ]
         }
       ]
