Creado mediante Colaboratory

--- a/Cuaderno3_Loops.ipynb
+++ b/Cuaderno3_Loops.ipynb
@@ -1042,29 +1042,45 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "YWPWFPwhlaJQ"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
+        "acum=0  #variable destinada a acumular\n",
         "num=1\n",
         "while num:\n",
-        "  num=int(input(\"Ingrese un nuevo número entero: \"))"
+        "  num=int(input(\"Ingrese un nuevo número entero: \"))\n",
+        "  acum+=1\n",
+        "print(f\"Usted ingresó {acum} números, incluyendo el 0\")"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "LNCwJj7G7IgB",
-        "outputId": "89f9f2c0-0b9f-4b02-cfda-f2a4c9744d86"
+        "outputId": "39520928-8184-4e22-eb2c-cce3a3901e00"
       },
-      "execution_count": 5,
+      "execution_count": 2,
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
-            "Ingrese un nuevo número: 4\n",
-            "Ingrese un nuevo número: 5\n",
-            "Ingrese un nuevo número: 6\n",
-            "Ingrese un nuevo número: 0\n"
+            "Ingrese un nuevo número entero: 456\n",
+            "Ingrese un nuevo número entero: 32132\n",
+            "Ingrese un nuevo número entero: 4656333\n",
+            "Ingrese un nuevo número entero: 2\n",
+            "Ingrese un nuevo número entero: 7894\n",
+            "Ingrese un nuevo número entero: 1\n",
+            "Ingrese un nuevo número entero: 3\n",
+            "Ingrese un nuevo número entero: 0000321\n",
+            "Ingrese un nuevo número entero: 0\n",
+            "Usted ingresó 9 números, incluyendo el 0\n"
           ]
         }
       ]
@@ -1096,7 +1112,7 @@
         "id": "gCaxKOXn8OyY",
         "outputId": "acf5fc3b-a3e4-40d8-9bd3-993aefc1cea1"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "name": "stdout",
