--- a/Parcial1_.ipynb
+++ b/Parcial1_.ipynb
@@ -30,7 +30,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#Punto b Discretizado\n"
+        "#Punto b\n"
       ],
       "metadata": {
         "id": "d14xnVmF-lvf"
