--- a/2_SLIT/Cuaderno1_Convolucion.ipynb
+++ b/2_SLIT/Cuaderno1_Convolucion.ipynb
@@ -4,6 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
+      "toc_visible": true,
       "include_colab_link": true
     },
     "language_info": {
@@ -374,6 +375,47 @@
         "\n",
         "The notebooks are provided as [Open Educational Resource](https://de.wikipedia.org/wiki/Open_Educational_Resources). Feel free to use the notebooks for your own educational purposes. The text is licensed under [Creative Commons Attribution 4.0](https://creativecommons.org/licenses/by/4.0/), the code of the IPython examples under the [MIT license](https://opensource.org/licenses/MIT). Please attribute the work as follows: *Lecture Notes on Signals and Systems* by Sascha Spors."
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#DESARROLLO:\n",
+        "##presentado por Juan Manuel Mejia Vasco\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "j-nfJEpvqbQf"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "9-O5t40KmXHf"
+      },
+      "source": [
+        "## Ejercicio\n",
+        "\n",
+        "Ahora resulta obvio que tenemos que considerar tres casos con respecto a la superposición de $h(t-\\tau)$ y $x(\\tau)$\n",
+        "\n",
+        "1. $t<0$: sin traslape\n",
+        "2. $0 \\leq t < 1$: traslape parcial\n",
+        "3. $t > 0$: traslape completo\n",
+        "\n",
+        "\n",
+        "\n",
+        "**Ejercicio**\n",
+        "\n",
+        "En el **cuarto paso**, la evaluación de las integrales de convolución para los tres casos se deja abierta como un ejercicio. Tenga en cuenta que, en el primer caso, no se superponen, es decir que $y(t)=0$ para $t<0$."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Se resuelve el ejercicio en el [pdf](https://github.com/JMMV314/Se-ales-y-Sistemas/blob/main/2_SLIT/Convoluci%C3%B3n.pdf)"
+      ],
+      "metadata": {
+        "id": "Np-hXkKsbcI_"
+      }
     }
   ]
 }
